--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
 
 @font-face {
+    font-family: titulo;
+    src: url(../fontes/Neon.ttf) format(truetype);
+    font-weight: normal;
+}
+
+@font-face {
     font-family: escrita;
     src: url(../fontes/Caveat-VariableFont_wght.ttf) format(truetype);
     font-weight: normal;
@@ -16,7 +22,7 @@
     --cor1: black;
     --cor2: white;
 
-    --fontetitulo: 'titulo';
+    --fontetitulo: 'titulo', arial;
     --fonteescrita: 'escrita', Arial;
     --fontenome: 'nome', arial;
 }
@@ -31,16 +37,18 @@ header {
     color: var(--cor2);
     text-align: center;  
     padding: 50px;
+    max-width: 98%;
 }
 
 header > h1 {
     font-family: var(--fontetitulo);
     padding-bottom: 10px;
-    font-size: 400%;
+    font-size: 4em;
+    margin: auto;
 }
 
 header > p {
-    font-size: 150%;
+    font-size: 1.5em;
 }
 
 p > a {
@@ -53,7 +61,36 @@ p > a:hover {
     text-decoration: underline;
 }
 
-main> p {
-    font-family: var(--fontetitulo);
+section#p1 {
+    font-family: var(--fonteescrita);
     font-size: 50px;
+    max-width: 500px;
+    height: 77vh;
+    padding: 30px 0px 0px 30px;
+    background-color: rgba(0, 0, 0, 0.226);
+}
+
+section#container {
+    background-size: 100% 100%;
+    height: 77vh;
+    position: relative;
+}
+
+article#conteudo {
+    background-size: 100% 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: -50%, -50%;
+}
+
+section.fundo1 {
+    background-color: black;
+    background-image: url(../imagens/background001.jpg);
+}
+
+article.conteudo {
+    background-color: rgba(0, 0, 0, 0.068);
+    color: white;
+    text-align: justify;
 }
