--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -27,9 +27,8 @@
     --fontenome: 'nome', arial;
 }
 
-* {
+body {
     margin: 0px;
-    padding: 0px;
 }
 
 header {
@@ -61,36 +60,14 @@ p > a:hover {
     text-decoration: underline;
 }
 
-section#p1 {
-    font-family: var(--fonteescrita);
-    font-size: 50px;
-    max-width: 500px;
-    height: 77vh;
-    padding: 30px 0px 0px 30px;
-    background-color: rgba(0, 0, 0, 0.226);
+footer {
+    background-color: var(--cor1);
+    color: var(--cor2);
+    text-align: center;
 }
 
-section#container {
-    background-size: 100% 100%;
-    height: 77vh;
-    position: relative;
-}
-
-article#conteudo {
-    background-size: 100% 100%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: -50%, -50%;
-}
-
-section.fundo1 {
-    background-color: black;
-    background-image: url(../imagens/background001.jpg);
-}
-
-article.conteudo {
-    background-color: rgba(0, 0, 0, 0.068);
-    color: white;
-    text-align: justify;
+footer > p {
+    margin: 0px;
+    padding: 10px;
+    font-size: 1.2em;
 }
