--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -64,7 +64,33 @@ p > a:hover {
 section {
     font-family: var(--fonteescrita);
     font-size: 2em;
+    max-width: 100%;
+    padding: 50px;
+    
 }
+
+section > p {
+    padding: 15px;
+}
+
+section#img01 {
+    background-color: black;
+    background-image: url(../imagens/background001.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+
+section#img01 > p {
+    background-color: rgba(0, 0, 0, 0.295);
+    color: white;
+    max-width: 300px;
+    border-radius: 10px;
+    padding: 15px;
+}
+
 
 footer {
     background-color: var(--cor1);
