--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -21,12 +21,17 @@
 :root {
     --cor1: black;
     --cor2: white;
+    --corfundo: rgba(0, 0, 0, 0.39);
 
     --fontetitulo: 'titulo', arial;
     --fonteescrita: 'escrita', Arial;
     --fontenome: 'nome', arial;
 }
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
 body {
     margin: 0px;
@@ -63,7 +68,7 @@ p > a:hover {
 
 section {
     font-family: var(--fonteescrita);
-    font-size: 2em;
+    font-size: 2.5em;
     max-width: 100%;
     padding: 50px;
     
@@ -71,22 +76,32 @@ section {
 
 section > p {
     padding: 15px;
+    font-weight: bolder;
 }
 
 section#img01 {
-    background-color: black;
-    background-image: url(../imagens/background001.jpg);
-    background-repeat: no-repeat;
+    background: var(--corfundo) url(../imagens/background001.jpg) center center no-repeat fixed;
     background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
 }
 
 
 section#img01 > p {
-    background-color: rgba(0, 0, 0, 0.295);
-    color: white;
-    max-width: 300px;
+    background-color: rgba(0, 0, 0, 0.39);
+    color: var(--cor2);
+    max-width: 350px;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+section#img02 {
+    background: var(--corfundo)  url(../imagens/background002.jpg) center center no-repeat fixed;
+    background-size: cover;
+}
+
+section#img02 > p {
+    background-color: var(--corfundo);
+    color: var(--cor2);
+    max-width: 350px;
     border-radius: 10px;
     padding: 15px;
 }
@@ -99,7 +114,6 @@ footer {
 }
 
 footer > p {
-    margin: 0px;
-    padding: 10px;
+    padding: 15px;
     font-size: 1.2em;
 }
