--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -45,15 +45,15 @@ header {
 }
 
 header > h1 {
-    padding-top: 50px;
     font-family: var(--fontetitulo);
     font-variant: small-caps;
-    font-size: 4em;
+    font-size: 5vw;
+    padding-top: 50px;
     margin: auto;
 }
 
 header > p {
-    font-size: 1.5em;
+    font-size: 1.5vw;
     padding-bottom: 50px;
 }
 
@@ -69,9 +69,8 @@ header a:hover, footer a:hover {
 
 section {
     font-family: var(--fonteescrita);
-    font-size: 2.5em;
+    font-size: 3.5vw;
     line-height: 2em;
-    max-width: 100%;
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;  
@@ -89,7 +88,8 @@ section.imagem {
 
 section.imagem > p {
     background-color: var(--corfundo);
-    width: 400px;
+    display: inline-block;
+    padding-right: 20px;
     border-radius: 10px;
 
 }
