Tentativa de correção img01 em mobile

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -89,7 +89,6 @@ section.imagem {
     background-color: var(--corfundo);
     color: var(--cor2);
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.548);
-    background-size: cover;
 }
 
 section.imagem > p {
@@ -103,10 +102,12 @@ section.imagem > p {
 
 section#img01 {
     background: url(../imagens/background001.jpg) center center no-repeat fixed;
+    background-size: cover;
 }
 
 section#img02 {
-    background: var(--corfundo)  url(../imagens/background002.jpg) right center no-repeat fixed;
+    background: url(../imagens/background002.jpg) right center no-repeat fixed;
+    background-size: cover;
 }
 
 footer {
